# VISOR

./: .gitignore  README.md
AndroidApp/visor/: settings.gradle.kts
AndroidApp/visor/app/: build.gradle.kts
AndroidApp/visor/app/src/main/: AndroidManifest.xml
AndroidApp/visor/app/src/main/res/color/: bottom_nav_item_colors.xml
AndroidApp/visor/app/src/main/res/layout/: activity_main.xml  (+18 more)
AndroidApp/visor/gradle/wrapper/: gradle-wrapper.properties
Extra/Tester_bt_send/: settings.gradle.kts
Extra/Tester_bt_send/app/: build.gradle.kts
Extra/Tester_bt_send/app/src/main/: AndroidManifest.xml
Extra/Tester_bt_send/gradle/wrapper/: gradle-wrapper.properties
Extra/bmp2bin2hex/: CBI_file_tester  CBI_file_tester.c  convert.py
HudUnit/: CMakeLists.txt  HudUnit.ino
HudUnit/src/: Bluetooth.cpp  Bluetooth.h  Display.cpp  Display.h  Fonts.h  ImageProcessor.h  Images.h  MyImage.h  MySPI.cpp  MySPI.h  NavIcons.h  QRGen.h  SSD1331_CMD.h  Utils.h  Visor.cpp  Visor.h
HudUnit/src/fonts/: Font16.c  Font20.c  Font24.cpp  Font8.c
HudUnit/src/images/: Icon_01_merge.cpp  Icon_02_ferry_train.cpp  Icon_03_ferry.cpp  Icon_04_turn_slight_left.cpp  Icon_05_turn_left.cpp  Icon_06_turn_sharp_left.cpp  Icon_07_ramp_left.cpp  Icon_08_fork_left.cpp  Icon_09_uturn_left.cpp  Icon_10_roundabout_left.cpp  Icon_11_turn_slight_right.cpp  Icon_12_turn_right.cpp  Icon_13_turn_sharp_right.cpp  Icon_14_ramp_right.cpp  Icon_15_fork_right.cpp  Icon_16_uturn_right.cpp  Icon_17_roundabout_right.cpp  Icon_18_destination.cpp  image1.cpp  image2.cpp  image_disconnected.cpp  image_standBy.cpp
(+84 files in other folders)
